My First Website

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
               <h1 class="mb-5">About<br><br> My name is Louise Jensen. I was born and raised in Hong Kong, but I'm originally from Denmark. I'm studying at the University of Miami, currently a Junior.</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Click to follow!</a>
+              <a href="https://www.instagram.com/louisejensenhk/" alt="#download" class="btn btn-outline btn-xl js-scroll-trigger">Click to follow!</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -181,14 +181,10 @@ One-month internship for Cade Studio, <br> a graphic design studio for branding 
     <section class="cta">
       <div class="cta-content">
         <div class="container">
-          <h2>Family</h2><br><br>
-          <img src="images/sisters.jpg" class="img-fluid" style="height:600px;""> <br> <br>
-          <p> Frank Jensen, <br>
-            Camilla Jensen, <br>
-            Caroline Jensen (right hand side of image) <br>
-            Sophie Jensen (left hand side of image)<br>
-            & Louise Jensen. <br> <br> <br>
-          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">click for more!</a>
+          <h2> Instagram Presence </h2><br><br>
+          <img src="images/instagramlou.jpg" class="img-fluid" style="height:600px;""> <br> <br>
+          <p> This is where I post most of my traveling pics! Follow! </p> <br> <br> <br>
+      <a href="https://www.instagram.com/louisejensenhk/" alt="#download" class="btn btn-outline btn-xl js-scroll-trigger">Click to follow!</a>
         </div>
       </div>
       <div class="overlay"></div>
@@ -196,7 +192,7 @@ One-month internship for Cade Studio, <br> a graphic design studio for branding 
 
     <section class="contact bg-primary" id="contact">
       <div class="container">
-        <h2>We
+        <h2>I
           <i class="fas fa-heart"></i>
           new friends!</h2>
         <ul class="list-inline list-social">
