--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">About<br><br> My name is Louise Jensen. I was born and raised in Hong Kong, but I'm originally from Denmark. I'm studying at the University of Miami, currently a Junior.</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Click to follow!</a>
+              <h1 class="mb-5">Welcome to my <br> Travel Blog<br><br> This blog will give you content on the three countries I have lived in; Hong Kong, Copenhagen & Miami.</h1>
+
+              <a href="https://www.instagram.com/louisejensenhk/" alt="#download" class="btn btn-outline btn-xl js-scroll-trigger">Click to follow!</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
@@ -124,7 +125,7 @@
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="images/10.jpg" class="img-fluid" alt="">
+                    <img src="images/22.jpg" style="width:1000px;height:600px;" class="img-fluid" alt="">
                   </div>
                   <div class="button">
                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -141,11 +142,17 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">WELCOME TO MY TRAVEL BLOG!</h2>
-            <p>This blog will give you content on the three countries I have lived in; Hong Kong, Copenhagen & Miami. </p>
+            <h2 class="section-heading">
+                <h2 class="mb-5">Globalized Society: <br> Third Culture Kids </h2> <br><br> <br> <p> These are Third Culture Kids (or TCKs), a term coined by US sociologist Ruth Hill Useem in the 1950s, for children who spend their formative years in places that are not their parents' homeland. Globalisation has made TCKs more common.
+Mostly, they are children of expatriate workers, but they can come from transnational marriages, or - as is increasingly common in Asia - attend an international school in their home country. TCKs often develop an identity that's rooted in people rather than places. <br><br><br><br><br>
+<img src="images/global.jpg" style="width:1000px;height:auto;" class="img-fluid" alt="">
+</p>
             <div class="badges">
               <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
               <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+
+                <a href="http://www.bbc.com/capital/story/20161117-third-culture-kids-citizens-of-everywhere-and-nowhere" alt="#download" class="btn btn-outline btn-xl js-scroll-trigger">Read More</a>
+
             </div>
           </div>
         </div>
@@ -198,10 +205,14 @@
     <section class="cta">
       <div class="cta-content">
         <div class="container">
-          <h2>Contact:</h2><br><br>
-          <p>3737 Peacock Ave, <br>#530 South Miami, <br>FL 33146, U.S.<br>
-+1 (786) 910-3275 <br> lxj204@miami.edu</p>
-          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">contact!</a>
+          <img src="images/7.jpg" style="width:620px;height:auto;" class="img-fluid" alt=""> <br><br><br><br>
+          <h2> Traveling the world, <br> escaping reality.</h2><br><br>
+          <p>Do we travel to escape reality? My grandmother has a very specific view of people who travel a lot, especially older people. She can't understand how they can't just be happy with staying at home, why their souls are so restless and unhappy with their current situation.
+          <br> <br> I hear and read this a lot: If you travel all the time, you're running away from something. Is that true? Are we running away from something...if so, then what are we running from? Do We Travel To Escape Reality. <br> <br> I believe that nearly all of us are running, but for two different reasons: <br> <br> Some have restless souls trying to find happiness in external things like adventure and experiences, in other words, they're trying to escape from who they are right now - hoping to change. <br> <br>Some are dreamers running away from society hoping to find an escape somewhere else or to find an answer telling them that life doesn't have to be the way people force it to be.
+          </p>
+          <br><br><br><br>
+          <a href="https://www.aswetravel.com/do-we-travel-to-escape-reality/" alt="#download" class="btn btn-outline btn-xl js-scroll-trigger">Read More</a>
+
         </div>
       </div>
       <div class="overlay"></div>
@@ -209,7 +220,7 @@
 
     <section class="contact bg-primary" id="contact">
       <div class="container">
-        <h2>We
+        <h2>I
           <i class="fas fa-heart"></i>
           new friends!</h2>
         <ul class="list-inline list-social">
