--- a/mia.html
+++ b/mia.html
@@ -49,7 +49,7 @@
         <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
 
         <!-- Custom styles for this template -->
-        <link href="css/new-age.min.css" rel="stylesheet">
+        <link href="/Users/louisejensen/Desktop/cimfinalproject/my-scroll/mia.css" rel="stylesheet">
 
 
   </head>
@@ -113,17 +113,11 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5"> This is where I grew up.</h1> <br>
+              <h1 class="mb-5"> Where I'm Currently Living.</h1> <br>
 
-            <p> Yo, I LOVE Hong Kong, I swear when you come to Hong Kong you would want to live there. The view is amazing. Hong Kong is a city that I miss the most, and that I will always remember. <br> <br>
+            <p> <h3>I'm living in Miami, studying at the University of Miami, and I absolutely love it! The atmosphere is amazing, and I sense a lot of diversity in Miami. It hasn't been a hard transition moving here.</h3> </p> <br><br>
 
-      The view is amazing at the Peak. One place you need to go to when you are visiting Hong Kong, is The Peak. The Peak also offers a very good hike that you can go on. I like it a lot and it's not that long. Don't worry. <br> <br>
 
-      If you come to Hong Kong and you are looking for a beach to go swimming, you should visit The Repulse Bay Beach. The Repulse Bay Beach is a cool beach. Lot's of people have fun there. You can ask anyone. If you are in Hong Kong when it is Lantern Festival, the Repulse Bay beach is a great place to experience the Chinese lunar moon festival. It's a great place to go with your friends and Family. But it's dark so tell your children not to go swimming or they'll get lost!
-
-      <br> Hope you Enjoy Hong Kong!!!! </p> <br><br>
-
-          <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Click for more!</a>
 
           </div>
 
@@ -134,7 +128,7 @@
                 <div class="device">
                   <div class="screen">
                     <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                    <img src="images/2.jpg" class="img-fluid" style="height:400px">
+                    <img src="images/19.jpg" class="img-fluid" style="height:400px">
                   </div>
                   <div class="button">
                     <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -151,11 +145,20 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <h2 class="section-heading"> <h2> Thriving as an Expat</h2>
-            <h5>A little about myself, Dec 3, 2018</h5>
-            <img class="30img" src="images/30.jpg" style="height:460px">
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <h2 class="section-heading"> <h2> Best Dining in Miami</h2>
+            <h5>My guide to dining in Miami, Dec 3, 2018</h5>
+            <img class="30img" src="images/setai.jpg" style="height:560px"> <br><br><br>
+            <p> <h3> 1. Brunch at the Setai: </h3> <br> Best brucnh you'll ever eat. $$$ <br> address: 2001 Collins Ave, Miami Beach, FL 33139<br><br><br>
+
+            <h3>  2. Pubbelly South Beach / Pubbelly Brickell City Centre: </h3> <br> Great sushi, very unique. Suggest ordering the cripsy rice, tuna pizza, buffalo rockshrimp tempura! $$. address: 701 S Miami Ave #421, Miami, FL 33131 <br><br><br>
+
+            <h3> 3. Swan Miami: </h3> <br> Very nice new restaurant in Miami Design district! It's such a nice place to eat dinner and the owner is Pharrell Willams. $$$. address: 90 NE 39th St, Miami, FL 33137<br> <br><br>
+
+            <h3> 4. Komodo: </h3> <br> Honestly the best asian fusion food that you'll eat in Miami. It's so fire!! Order the pecking duck and thai beef jerky! $$$ address: 801 Brickell Ave, Miami, FL 33131 <br><br><br>
+
+
+            </p>
+
           </div>
               <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
               <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -167,32 +170,42 @@
       <div class="container">
         <div class="section-heading text-center">
 
-            <h2> Hong Kong's Hotspots </h2>
-            <h5> Beautiful unknown tourist areas & nature spots in Hong Kong, Dec 3, 2018</h5>
-            <img class="images" src="images/31.jpg" style="height:460px">
+            <h2> Miami's Adventures </h2>
+            <h5> Beautiful unknown adventures I've been on, Dec 3, 2018</h5>
+            <br> <br>
+
+            <p> <h3> 1. Key Largo Kayaking: </h3> <br> Key Largo is a census-designated place in Monroe County, Florida, United States, located on the island of Key Largo in the upper Florida Keys. The population was 10,433 at the 2010 census. The name comes from the Spanish Cayo Largo, or "long key". It's only 40 minutes away from Miami and you can drive along U.S. 1 highway. <br><br>  <img class="images" src="images/63.jpg" style="height:460px">
+              <br><br>
+
+            <h3>  2. Okeechobee Music & Arts Festival: </h3> <br> The Okeechobee Music and Arts Festival was an annual four-day music and arts festival produced by Soundslinger, LLC. The festival was held at the 600-acre property, Sunshine Grove in Okeechobee, Florida. <br><br>
+
+            <img class="images" src="images/65.jpg" style="height:460px"> <br> <br>
+
+            <h3> 3. Key West: </h3> <br> Another fun adventure i've been to thats close to miami is Key West. You can go for a weekend with friends! bring sun screen! <br> <br>
+
+            <img class="images" src="images/64.jpg" style="height:460px"> <br> <br>
+            <br><br>
+
+            <h3> 4. Key Biscayne: </h3> <br> Honeslty a nice beach to go to is Key Biscayne. It's much closer than traveling on those further afventures up north of Miami, but it's still a very nice location to visit. There's a nice restaurant located in Key Biscayne, if you like seafood, it's called Rusty Pelican. Best views for a meal. <br> <br>
+<img class="images" src="images/66.jpg" style="height:460px">
+            <br><br>
+
+            <h3> 5. Miami Design District: </h3> <br> The Design District is known for its sleek modern architecture, upscale interior design stores and art galleries. Luxury fashion and jewelry boutiques, cafes and celebrity-chef restaurants draw a well-heeled crowd. Public art dotting the area includes the Fly’s Eye Dome, a geodesic dome designed by inventor Buckminster Fuller. Opening in December, 2017, The Institute of Contemporary Art will show cutting-edge work. <br> <br>
+<img class="images" src="images/67.jpg" style="height:460px">
+            <br><br>
 
 
-              <h2> HKG Foodies </h2>
-              <h5> Trust me daddy!!! best food spots in Hong Kong, Dec 3, 2018</h5>
-              <img class="images" src="images/101.jpg" style="height:600px">
-              <p>Some text..</p>
-              <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            </div>
-
-<br><br><br>
+          </p> <br><br>
       </div>
     </section>
 
     <section class="cta">
       <div class="cta-content">
         <div class="container">
-          <h2>We Livin' In China, Baby!</h2><br><br>
-          <img src="images/6.jpg" class="img-fluid" style="height:600px;""> <br> <br>
-          <p> Frank Jensen, <br>
-            Camilla Jensen, <br>
-            Caroline Jensen (right hand side of image) <br>
-            Sophie Jensen (left hand side of image)<br>
-            & Louise Jensen. <br> <br> <br>
+          <h2>MIA</h2><br><br>
+          <img src="images/57.jpg" class="img-fluid" style="height:600px;"> <br> <br>
+          <p> <br> Got a lot of love for this city <br>
+            I'm thankful for everyone who made my years in Miami so truly amazing.  <br> <br> <br>
           <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">click for more!</a>
         </div>
       </div>
@@ -201,7 +214,7 @@
 
     <section class="contact bg-primary" id="contact">
       <div class="container">
-        <h2>We
+        <h2>I
           <i class="fas fa-heart"></i>
           new friends!</h2>
         <ul class="list-inline list-social">
